[metadata]
name = dhlabel
version = 0.0.1
author = Chrismettal
author_email = chrismettal@binary-6.de
description = DHL label consolidator for printing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chrismettal/dhlabel
project_urls =
    Bug Tracker = https://github.com/Chrismettal/dhlabel/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = dhlabel
python_requires = >=3.6
install_requires =
    pypdf


[options.packages.find]
where = dhlabel

[options.entry_points]
console_scripts =
    dhlabel = dhlabel.__main__:main